--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,13 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
