--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,6 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
-    "nodemailer": "^6.9.14",
-    "twilio": "^5.2.2"
+    "nodemailer": "^6.9.14"
   }
 }
